--- a/.github/workflows/apps-plugin-snapshot.yml
+++ b/.github/workflows/apps-plugin-snapshot.yml
@@ -39,7 +39,7 @@ jobs:
             ${{ runner.os }}-m2-
       - name: Configure JFrog Cli
         run: |
-          jfrog rt mvnc \
+          jfrog mvnc \
             --server-id-resolve=repo.spring.io \
             --server-id-deploy=repo.spring.io \
             --repo-resolve-releases=libs-milestone \
