--- a/.github/workflows/common.yml
+++ b/.github/workflows/common.yml
@@ -409,7 +409,7 @@ jobs:
         uses: dorny/test-reporter@v1
         if: ${{ success() || failure() }}
         with:
-          name: Unit Tests - Processors
+          name: Unit Tests - Processors - ${{ matrix.app }}
           path: '**/surefire-reports/*.xml'
           fail-on-empty: false
           reporter: java-junit
@@ -417,7 +417,7 @@ jobs:
         uses: dorny/test-reporter@v1
         if: ${{ success() || failure() }}
         with:
-          name: Integration Tests - Processors
+          name: Integration Tests - Processors - ${{ matrix.app }}
           path: '**/failsafe-reports/*.xml'
           reporter: java-junit
           fail-on-empty: false
@@ -546,7 +546,7 @@ jobs:
         uses: dorny/test-reporter@v1
         if: ${{ success() || failure() }}
         with:
-          name: Unit Tests - Sinks
+          name: Unit Tests - Sinks - ${{ matrix.app }}
           path: '**/surefire-reports/*.xml'
           fail-on-empty: false
           reporter: java-junit
@@ -554,7 +554,7 @@ jobs:
         uses: dorny/test-reporter@v1
         if: ${{ success() || failure() }}
         with:
-          name: Integration Tests - Sinks
+          name: Integration Tests - Sinks - ${{ matrix.app }}
           path: '**/failsafe-reports/*.xml'
           reporter: java-junit
           fail-on-empty: false
@@ -668,7 +668,7 @@ jobs:
         uses: dorny/test-reporter@v1
         if: ${{ success() || failure() }}
         with:
-          name: Unit Tests - Sources
+          name: Unit Tests - Sources - ${{ matrix.app }}
           path: '**/surefire-reports/*.xml'
           fail-on-empty: false
           reporter: java-junit
@@ -676,7 +676,7 @@ jobs:
         uses: dorny/test-reporter@v1
         if: ${{ success() || failure() }}
         with:
-          name: Integration Tests - Sources
+          name: Integration Tests - Sources - ${{ matrix.app }}
           path: '**/failsafe-reports/*.xml'
           reporter: java-junit
           fail-on-empty: false
