--- a/functions/consumer/ftp-consumer/pom.xml
+++ b/functions/consumer/ftp-consumer/pom.xml
@@ -27,6 +27,7 @@
             <groupId>org.springframework.cloud.fn</groupId>
             <artifactId>function-test-support</artifactId>
             <version>${project.version}</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
