--- a/functions/consumer/sftp-consumer/pom.xml
+++ b/functions/consumer/sftp-consumer/pom.xml
@@ -22,6 +22,7 @@
             <groupId>org.springframework.cloud.fn</groupId>
             <artifactId>function-test-support</artifactId>
             <version>${project.version}</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
