--- a/.github/workflows/apps-plugin-snapshot.yml
+++ b/.github/workflows/apps-plugin-snapshot.yml
@@ -26,7 +26,7 @@ jobs:
         with:
           maven-version: 3.8.8
           maven-mirror: 'https://dlcdn.apache.org/maven/maven-3/'
-      - uses: jfrog/setup-jfrog-cli@v1
+      - uses: jfrog/setup-jfrog-cli@v3
         with:
           version: 1.46.4
         env:
@@ -39,12 +39,12 @@ jobs:
             ${{ runner.os }}-m2-
       - name: Configure JFrog Cli
         run: |
-          jfrog mvnc \
+          jfrog rt mvnc \
             --server-id-resolve=repo.spring.io \
             --server-id-deploy=repo.spring.io \
             --repo-resolve-releases=libs-milestone \
             --repo-resolve-snapshots=libs-snapshot \
-            --repo-deploy-releases=libs-release-local \
+            --repo-deploy-releases=libs-milestone-local \
             --repo-deploy-snapshots=libs-snapshot-local
           echo JFROG_CLI_BUILD_NAME=spring-cloud-dataflow-apps-plugin-main-snapshot >> $GITHUB_ENV
           echo JFROG_CLI_BUILD_NUMBER=$GITHUB_RUN_NUMBER >> $GITHUB_ENV
