Correct kafka-sink reference to new spring-kafka-publisher
The kafka-sink was still pointing to the older kafka-publisher
artifactId which has since been renamed to spring-kafka-publisher
in the Spring Functions Catalog.

--- a/applications/sink/kafka-sink/pom.xml
+++ b/applications/sink/kafka-sink/pom.xml
@@ -58,7 +58,7 @@
 							<dependencies>
 								<dependency>
 									<groupId>org.springframework.cloud.fn</groupId>
-									<artifactId>kafka-publisher</artifactId>
+									<artifactId>spring-kafka-publisher</artifactId>
 								</dependency>
 							</dependencies>
 						</maven>
