[CI] Increase timeout for Trivy scan

--- a/.github/workflows/ci-pr.yml
+++ b/.github/workflows/ci-pr.yml
@@ -146,6 +146,7 @@ jobs:
           ignore-unfixed: true
           format: 'table'
           severity: 'CRITICAL,HIGH'
+          timeout: '10m'
       - name: 'Scanned'
         shell: bash
         run: echo "::info ::Scanned"
