--- a/.github/workflows/common.yml
+++ b/.github/workflows/common.yml
@@ -52,6 +52,7 @@ jobs:
           output: 'trivy-results.sarif'
           severity: 'CRITICAL,HIGH'
           timeout: '30m'
+          skip-files: '**/README.adoc'
       - name: Upload Trivy scan results to GitHub Security tab
         uses: github/codeql-action/upload-sarif@v2
         with:
