--- a/.github/workflows/common.yml
+++ b/.github/workflows/common.yml
@@ -51,7 +51,7 @@ jobs:
           format: 'sarif'
           output: 'trivy-results.sarif'
           severity: 'CRITICAL,HIGH'
-          timeout: '30m'
+          timeout: '2h'
           skip-files: '**/README.adoc'
       - name: Upload Trivy scan results to GitHub Security tab
         uses: github/codeql-action/upload-sarif@v2
