--- a/.github/workflows/common.yml
+++ b/.github/workflows/common.yml
@@ -35,7 +35,6 @@ env:
   VERBOSE: ${{ (github.debug || inputs.verbose) && 'true' || '' }}
   BRANCH: ${{ inputs.branch }}
   MAVEN_THREADS: ${{ inputs.mavenThreads }}
-  TRIVY_DEBUG: 'true'
 
 jobs:
   scan:
@@ -51,8 +50,7 @@ jobs:
           format: 'sarif'
           output: 'trivy-results.sarif'
           severity: 'CRITICAL,HIGH'
-          timeout: '2h'
-          skip-files: '**/README.adoc'
+          timeout: '15m'
       - name: Upload Trivy scan results to GitHub Security tab
         uses: github/codeql-action/upload-sarif@v2
         with:
