--- a/applications/stream-applications-core/pom.xml
+++ b/applications/stream-applications-core/pom.xml
@@ -17,7 +17,7 @@
 
     <properties>
         <stream-apps-core.version>5.0.0-SNAPSHOT</stream-apps-core.version>
-        <java-functions.version>5.0.0-SNAPSHOT</java-functions.version>
+        <java-functions.version>5.0.0-M2</java-functions.version>
         <apps.base-image>springcloud/baseimage:1.0.4</apps.base-image>
 		<prometheus-rsocket.version>1.5.2</prometheus-rsocket.version>
         <spring-cloud-dataflow-apps-generator-plugin.version>1.0.12</spring-cloud-dataflow-apps-generator-plugin.version>
