--- a/applications/stream-applications-core/pom.xml
+++ b/applications/stream-applications-core/pom.xml
@@ -188,8 +188,10 @@
                                         </dependency>
                                         <dependency>
                                             <groupId>org.springframework.cloud.fn</groupId>
-                                            <artifactId>spring-function-dependencies</artifactId>
+                                            <artifactId>spring-functions-catalog-bom</artifactId>
                                             <version>${java-functions.version}</version>
+                                            <type>pom</type>
+                                            <scope>import</scope>
                                         </dependency>
                                     </dependencyManagement>
                                     <dependencies>
