Reverting to snapshot to fix build with spring-functions-catalog 5.0.0-M2

--- a/applications/sink/redis-sink/pom.xml
+++ b/applications/sink/redis-sink/pom.xml
@@ -29,7 +29,7 @@
 		<dependency>
 			<groupId>org.springframework.cloud.fn</groupId>
 			<artifactId>redis-common</artifactId>
-            <version>${project.version}</version>
+            <version>${java-functions.version}</version>
 			<type>test-jar</type>
 			<scope>test</scope>
 		</dependency>
