--- a/applications/source/xmpp-source/pom.xml
+++ b/applications/source/xmpp-source/pom.xml
@@ -41,6 +41,13 @@
             <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.16.1</version>
+            <scope>test</scope>
+        </dependency>
+
 
     </dependencies>
 
