--- a/applications/sink/xmpp-sink/pom.xml
+++ b/applications/sink/xmpp-sink/pom.xml
@@ -42,6 +42,13 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.16.1</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
